--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-color: #ddd;
+    background-color: #444;
 }
 
 /* SIDEBAR */ 
@@ -29,7 +29,7 @@ body {
 }
 
 .sidebar .nav-link {
-    margin-top: 30px;
+    /* margin-top: 30px; */
     width: 100%;
 }
 
