--- a/css/profile.css
+++ b/css/profile.css
@@ -1,9 +1,27 @@
-.profile-img img {
-    width: 80px;
-    height: 80px;
+.main-bg-props {
+    background-color:rgba(255, 255, 255, 0.5);
+    border-radius: 8px;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    padding-top: 15px;
 }
 
+.profile-img img {
+    width: 200px;
+    height: 200px;
+}
+
+.profile-img {
+    margin-top: 15px;
+}
 
 .main-content-wrapper {
     margin-left: 250px;
+}
+
+.main-content-wrapper .main-bg-props h3 {
+    text-transform: capitalize;
+    color: #fff;
+    font-weight: bold;
+    margin-left: 16px;
 }
